--- a/index.html
+++ b/index.html
@@ -30,9 +30,51 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <div id="7" class="row time-block">
+        <div class="col-md-1 hour">7:00AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="8" class="row time-block">
+        <div class="col-md-1 hour">8:00AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="8" class="row time-block">
+        <div class="col-md-1 hour">8AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="9" class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="23" class="row time-block">
+        <div class="col-md-1 hour">8AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+    <script src="./assets/script.js"></script>
   </body>
 </html>
