--- a/index.html
+++ b/index.html
@@ -47,24 +47,88 @@
         </button>
       </div>
 
-      <div id="8" class="row time-block">
-        <div class="col-md-1 hour">8AM</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 saveBtn btn">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
       <div id="9" class="row time-block">
-        <div class="col-md-1 hour">9AM</div>
+        <div class="col-md-1 hour">9:00AM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 saveBtn btn">
           <i class="fas fa-save"></i>
         </button>
       </div>
 
-      <div id="23" class="row time-block">
-        <div class="col-md-1 hour">8AM</div>
+      <div id="10" class="row time-block">
+        <div class="col-md-1 hour">10:00AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="11" class="row time-block">
+        <div class="col-md-1 hour">11:00AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="12" class="row time-block">
+        <div class="col-md-1 hour">12:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="13" class="row time-block">
+        <div class="col-md-1 hour">1:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="14" class="row time-block">
+        <div class="col-md-1 hour">2:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="15" class="row time-block">
+        <div class="col-md-1 hour">3:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="16" class="row time-block">
+        <div class="col-md-1 hour">4:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="17" class="row time-block">
+        <div class="col-md-1 hour">5:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="18" class="row time-block">
+        <div class="col-md-1 hour">6:00PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="19" class="row time-block">
+        <div class="col-md-1 hour">7:00PM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="col-md-1 saveBtn btn">
           <i class="fas fa-save"></i>
